--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "eslint-plugin-react-hooks": "^4.2.0",
     "identity-obj-proxy": "^3.0.0",
     "jest": "^26.6.3",
+    "lerna": "^3.22.1",
     "mini-css-extract-plugin": "^1.3.1",
     "react-test-renderer": "^17.0.1",
     "sass": "^1.29.0",
@@ -54,7 +55,11 @@
     "webpack-dev-server": "^3.11.0"
   },
   "dependencies": {
+    "module-alias": "^2.2.2",
     "react": "^17.0.1",
     "react-dom": "^17.0.1"
+  },
+  "_moduleAliases": {
+    "Components": "dist/ui-components"
   }
 }
