--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,10 +7,17 @@
     "target": "es5",
     "jsx": "react",
     "allowJs": true,
-    "esModuleInterop": true
+    "esModuleInterop": true,
+    "moduleResolution": "node",
+    "baseUrl": "./",
+    "paths": {
+      "Components": ["packages/ui-components"],
+    }
   },
   "include": [
-    "src/**/*", "__mocks__", "__tests__/components/App.test.tsx"
+    "packages",
+    "__mocks__",
+    "__tests__/components/App.test.tsx"
   ],
   "exclude": [
     "node_modules"
